src/sass/formio.form.scss
/* ... */
/* ckeditor5-block-quote/theme/blockquote.css */
.formio-component-content blockquote {
  overflow: hidden;
  padding-right: 1.5em;
  padding-left: 1.5em;
  margin-left: 0;
  margin-right: 0;
  font-style: italic;
  border-left: solid 5px hsl(0, 0%, 80%);
}
/* ckeditor5-block-quote/theme/blockquote.css */
.formio-component-content[dir="rtl"] blockquote {
  border-left: 0;
  border-right: solid 5px hsl(0, 0%, 80%);
}

.formio-component-content {
  & .text-tiny {
    font-size: 0.7em;
  }

  & .text-small {
    font-size: 0.85em;
  }

  & .text-big {
    font-size: 1.4em;
  }

  & .text-huge {
    font-size: 1.8em;
  }
}

.formio-component-address.formio-component-label-hidden {
  & > label.field-required {
    z-index: 1;

    & ~ .address-autocomplete-container .address-autocomplete-remove-value-icon {
      right: 20px;
    }
  }
}

.address-autocomplete-container {
  position: relative;

  .address-autocomplete-remove-value-icon {
    cursor: pointer;
    position: absolute;
    margin-top: -9px;
    right: 10px;
    top: 50%;

    &--hidden {
      display: none;
    }
  }
}

.autocomplete {
  background: white;
  font: 14px/22px "-apple-system", BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
  overflow: auto;
  box-sizing: border-box;
  border: 1px solid rgba(50, 50, 50, 0.6);
  z-index: $autocomplete-in-dialog-z-index;
}

.autocomplete > div {
  cursor: pointer;
  padding: 6px 10px;
}

.autocomplete > div:hover:not(.group),
.autocomplete > div.selected {
  background: #1e90ff;
  color: #ffffff;
}

.field-wrapper {
  display: flex;

  &--reverse {
    flex-direction: row-reverse;
  }

  .field-label--right {
    text-align: right;
  }
}

.formio-component-modal-wrapper {
  margin-bottom: 10px;
  .open-modal-button {
    height: auto;
  }
  .component-rendering-hidden {
    visibility: hidden;
  }
}

//show textarea submission in read-only mode and PDF view with initial line and space formatting
.formio-component-textarea {
  div.formio-editor-read-only-content[ref="input"] {
    white-space: pre-wrap;
  }
}

.formio-editor-read-only-content {
  img {
    max-width: 100%;
  }

  li[data-list="bullet"] {
    list-style-type: none;

    .ql-ui{
      padding-right: 0.5rem;

      &::before {
        content: "\2022";
      }
    }
  }

  li[data-list="ordered"] {
    list-style-type: none;
    counter-reset: list-1 list-2 list-3 list-4 list-5 list-6 list-7 list-8 list-9;
    counter-increment: list-0;

    .ql-ui {
      padding-right: 0.5rem;

      &::before {
        content: counter(list-0, decimal) '. ';
      }
    }
  }

  figure.table {
    table {
      border-collapse: collapse;
      border-spacing: 0;
      width: 100%;
      height: 100%;
      border: 1px double #b3b3b3;
      table-layout: fixed;

      th, td {
        min-width: 2em;
        padding: .4em;
        border: 1px solid #bfbfbf;
      }
    }
  }
}

.formio-component-textfield,
.formio-component-textarea,
.formio-component-password {
  .pull-right:not(:last-child) {
    padding-left: 12px;
  }
}

.formio-form > div > nav > ul.pagination {
  flex-flow: wrap row;

  .page-link {
    cursor: pointer;
    color: #1C74D9;
  }

  .page-item.active .page-link {
    color: #fff;
    background-color: #1C74D9;
    border-color: #1C74D9;
  }
}

.classic-pagination {
  border-bottom: solid 1px #e0e0e0;
  padding: 0 15px 10px 15px;
  line-height: 1em;

  &-page {
    padding: 0;
    position: relative;
  }

  &-title {
    color: #595959;
    font-size: 16px;
    margin-bottom: 5px;
  }

  &-dot {
    position: absolute;
    width: 30px;
    height: 30px;
    display: block;
    background: #fbe8aa;
    top: 40px;
    left: 50%;
    margin-top: -15px;
    margin-left: -15px;
    border-radius: 50%;

    &::after {
      content: ' ';
      width: 14px;
      height: 14px;
      background: #fbbd19;
      border-radius: 50px;
      position: absolute;
      top: 8px;
      left: 8px;
    }
  }

  .progress, &-progress {
    position: relative;
    border-radius: 0px;
    height: 8px;
    box-shadow: none;
    margin: 20px 0;
    border: none;
    padding: 0;
    background-color: #f6f6f6;

    &-bar {
      width: 0px;
      height: 10px;
      box-shadow: none;
      background: #fbe8aa;
    }
  }
}

.classic-pagination-page {
  &.complete {
    .progress-bar, .classic-pagination-progress-bar {
      width: 100%;
    }
  }
  &.active {
    .progress-bar, .classic-pagination-progress-bar {
      width: 50%;
    }
  }
  &.disabled {
    .classic-pagination-dot {
      background-color: #f5f5f5;
      &::after{
        opacity: 0;
      }
    }
  }
}

.classic-pagination-page  {
  &:first-child {
    .progress, .classic-pagination-progress {
      left: 50%;
      width: 50%;
    }

    &.active {
      .progress-bar, .classic-pagination-progress-bar {
        width: 0%;
      }
    }
  }

  &:last-child {
    .progress, .classic-pagination-progress {
      width: 50%;
    }

    &.active {
      .progress-bar, .classic-pagination-progress-bar {
        width: 100%;
      }
    }
  }
}
//styles for google maps dropdown
.pac-container {
  z-index: 11000;
}

[ref='buttonMessageContainer'].has-error {
  cursor: pointer;
}

[ref="passwordStrengthIndicator"] {
  display: inline;
}

.formio-security-indicator {
  display: flex;
  height: 5px;

  [class^="security-"] {
    width: 100%;
    height: 100%;
  }

  .security-low {
    background-color: #c51e00;
  }

  .security-medium {
    background-color: #ebb400;
  }

  .security-high {
    background-color: #bddf00;
  }

  .security-very-high {
    background-color: #009118;
  }
}

.formio-component-textarea {
  .formio-editor-read-only-content {
    .text-big {
      font-size: 1.4em;
    }

    .text-huge {
      font-size: 1.8em;
    }

    .text-small {
      font-size: 0.85em;
    }

    .text-tiny {
      font-size: 0.7em;
    }
  }
}

.formio-component [ref="valueMaskInput"] {
  display: none;
}
/* ... */

